Add basic functions in js

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main class="page__main">
         <p class="page__main--text">Introduce aquí tu número</p>
         <label for="guessthenumber" class="page__main--input-label"></label>
-        <input type="text" class="page__main--input-label" id="guessthenumber">
+        <input type="text" class="page__main--input" id="guessthenumber">
         <button class="btn">Prueba</button>
     </main>
 
