Add reset button and simplify html

--- a/index.html
+++ b/index.html
@@ -4,18 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jechfernandez's guess the number</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/main.css">
 </head>
 <body class="page">
-    <header class="page__header">
-        <h1 class="page__header--title">Adivina el número</h1>
-    </header>
-
+    
     <main class="page__main">
+
+        <h1 class="page__main--title">Adivina el número</h1>
         <p class="page__main--text">Introduce aquí tu número</p>
         <label for="guessthenumber" class="page__main--input-label"></label>
         <input type="text" class="page__main--input" id="guessthenumber">
-        <button class="btn">Prueba</button>
+        <button class="button">Prueba</button>
+        <button class="reset-button">Reset</button>
     </main>
 
     <footer class="page__footer">
