Add style and fix js const names

--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
         <p class="page__main--text">Introduce aquí tu número</p>
         <label for="guessthenumber" class="page__main--input-label"></label>
         <input type="text" class="page__main--input" id="guessthenumber">
+        <div class="buttons">
         <button class="button">Prueba</button>
         <button class="reset-button">Reset</button>
+        </div>
+
+        <div class="clues">
+            <p class="clues__text">
+                Escribe un número y dale a <em>prueba</em>
+            </p>
+            <div class="clues__counter">1</div>
+        </div>
+        
     </main>
 
-    <footer class="page__footer">
-        <p class="page__footer--text">
-            Escribe un número y dale a <em>prueba</em>
-        </p>
-        <div class="page__footer--counter">1</div>
-    </footer>
+
 
     <script type="text/javascript" src="./js/main.js"></script>
 </body>
